Whitespace fixes

--- a/styles/all/theme/abbc3.css
+++ b/styles/all/theme/abbc3.css
@@ -104,6 +104,7 @@
 
 /* NFO bbcode */
 .NFOTable { width: 100%; }
+
 /* IE6 Only */
 * html.nfo {
 	line-height: 86%;
@@ -111,6 +112,7 @@
 	font-size: 10px;
 	font-family: Terminal;
 }
+
 /* IE7 Only */
 *:first-child + html .nfo {
 	line-height: 86%;
@@ -118,9 +120,9 @@
 	font-size: 10px;
 	font-family: Terminal;
 }
-.nfotitle {
-	font-weight: bold;
-}
+
+.nfotitle { font-weight: bold; }
+
 .nfo {
 	color: #000000;
 	font-weight: normal;
